--- a/css/style.css
+++ b/css/style.css
@@ -67,10 +67,9 @@
 }
 
 .search-text:focus {
-    border: 1px solid var(--gray);
     color: var(--text-color);
-    font-weight: bold;
     background-color: #F4F4F4;
+    border-bottom: 2px solid var(--dark-green);
 }
 
 .header__search {
@@ -112,9 +111,7 @@
     background-color: #6bb922;
 }
 
-.search-text:focus {
-    border-bottom: 2px solid var(--dark-green);
-}
+
 
 .cart-text {
     color: var(--gray);
@@ -659,16 +656,17 @@ to {
 
 input, textarea {
     padding: 10px 15px;
-    border: 2px solid var(--text-color);
+    border: 2px solid var(--gray);
     border-radius: 10px;
 }
 
 input:focus, textarea:focus {
+    border: none;
     border-bottom: 2px solid var(--dark-green);
 }
 
 input::placeholder, .form_textarea::placeholder {
-    color: var(--text-color);
+    color: var(--gray);
     font-size: 20px;
 } 
 
